--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "laravel-echo": "^1.3.5",
         "pusher-js": "^4.2.2",
+        "vue-chat-scroll": "^1.2.1",
         "vue-router": "^3.0.1"
     }
 }
